--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,16 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(Sailor VERSION 0.1.0 LANGUAGES C CXX)
+project(Sailor)
+
+set(CMAKE_CXX_STANDARD 17)
+
+set(DEFAULT_BUILD_TYPE "Release")
 
 add_executable(Sailor src/main.cpp)
+
+if(WIN32) # Install dlls in the same directory as the executable on Windows
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+endif()
 
 include(FetchContent)
 FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/libcpr/cpr.git
